--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,44 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+// Journal articles
+@article{riasat-Effect-2023,
+  abbr        = {EPJP},
+  abstract    = {All possible theories of quantum gravity suggest the existence of a minimal length. As a consequence, the usual Heisenberg uncertainty principle (HUP) is replaced by a more general uncertainty principle known as the generalized uncertainty principle (GUP). The dynamics of all quantum mechanical system gets modified due to GUP. In this work, we consider both Einstein's and Debye's models to find the quantum gravity effect on the specific heat of solids. GUP modified specific heat in Einstein's model shows usual exponential dominance at low temperatures. Further, the modification to Debye's specific heat is calculated by considering the GUP modified dispersion relation, which becomes time dependent for elastic waves.},
+  author      = {Riasat, Sheikh and Mandal, Bhabani Prasad},
+  bibtex_show = {true},
+  date        = {2023-10-24},
+  doi         = {10.1140/epjp/s13360-023-04585-y},
+  isbn        = {2190-5444},
+  journal     = {The European Physical Journal Plus},
+  number      = {10},
+  pages       = {943},
+  selected    = {true},
+  title       = {Effect of quantum gravity on specific heat of solid},
+  url         = {https://doi.org/10.1140/epjp/s13360-023-04585-y},
+  volume      = {138},
+  year        = {2023}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+// Thesis
+@mastersthesis{riasat-Effect-2022,
+  abbr        = {MSc Thesis},
+  abstract    = {All possible theories of quantum gravity suggest the existence of a minimal length. Therefore, the usual Heisenberg uncertainty principle (HUP) is replaced by a more general uncertainty principle known as the generalized uncertainty principle (GUP). The dynamics of all quantum mechanical system gets modified due to GUP. In this work, we consider various quantum mechanical phenomena and review the correction to their respective Hamiltonian and energy levels. GUP modified quantization of a particle inside a box potential indicates that the space is quantized in the units of \(\alpha_0 l_p\,\) predicting an upper bound of the GUP parameter \(\alpha_0\). Furthermore, the modified Landau levels, simple harmonic oscillator (SHO) and Lamb shift also results in an upper bound of the GUP parameter. Apart from these, we review a relativistic quantum mechanical phenomenon, Dirac oscillator under the effect of magnetic field which is non-oscillating at a certain value of magnetic field even under the effect of gravity.},
+  author      = {Sheikh Riasat},
+  bibtex_show = {true},
+  month       = may,
+  school      = {Banaras Hindu University},
+  title       = {Effect of Gravity in Quantum Mechanics},
+  year        = {2022}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+// miscellaneous
+@misc{riasat-Ecology-2007,
+  abbr        = {Project},
+  abstract    = {Study was conducted in between Beki and Manas River covering an area of 1100 square kilometers. It extended the Railway line in North and mighty river Brahmaputra in the South.	Three different species of bats were detected. These include Indian Fruit Bat, Leaf Nosed Bat and Chungabaduli.	Indian Fruit Bat feed on 23 different plant species. They have 7 colonies on 10 different species of plants. Total population of this bat was 3811 during 29 July to 12 August, 2007. There are 2 colonies of leaf Nosed Bat in Assam Type Tin Houses, which were observed. Total population of this bat were 600. They are insectivorous.Chungabaduli have scanty population and remain scattered in the study area. They reside mainly in holes of bamboo posts and roof supports of thresh huts. The hunters kill the Fruit Bats for food and medicine used against Asthma, Body and joint pain and Night blindness. They use Nowsa and Baduliphand to catch bat. Open electrification also killed many fruit bat. Cutting of bat trees (habitat destruction) and killing of Bats are the major threat for the survival of the bat species in the study area. Age of the colonies range from 10-35 years. Average weight of the adults of Fruit bat, Leaf nosed bat and Chingabaduli are 1250 gm (1.25kg), 45.5 gm (0.0455 kg) and 10 gm (.010 kg) respectively. Respective wing span of these bats are 131 cm, 47 cm and 20 cm. Owners of the lands of the bats colonies have a great for the participation of these precious creature. They generally resist the hunters to kill the bats. Fruit bats are not found in those areas where mass people hunt hem for food e.g.: Roha area. One fruit bat is sold in the market for about INR. 35/-.},
+  author      = {Riasat, Sheikh},
+  bibtex_show = {true},
+  month       = aug,
+  school      = {National Children’s Science Congress},
+  title       = {Ecology and Conservation Strategy of Bats in Rural Area},
+  year        = {2007}
 }
